--- a/foundry.toml
+++ b/foundry.toml
@@ -7,4 +7,9 @@ remappings = [
     "@openzeppelin/contracts=lib/openzeppelin-contracts/contracts",
 ]
 
+[invariant]
+runs = 128
+depth = 128           # number of calls in a single run
+fail_on_revert = true # fail if a run reverts
+
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
