--- a/foundry.toml
+++ b/foundry.toml
@@ -8,8 +8,9 @@ remappings = [
 ]
 
 [invariant]
+fail_on_revert = false # fail if a run reverts
 runs = 128
-depth = 128           # number of calls in a single run
-fail_on_revert = true # fail if a run reverts
+depth = 128            # number of calls in a single run
+
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
